Calendario de jogos da copa nlw

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
             <ul>
                 <li>
-                    <img src="./assets/icon-brazil.svg" alt="Bandeira do Brazil">
-                    <strong>16:00</strong>
-                    <img src="./assets/icon-serbia.svg" alt="Bandeira da Serbia">
+                    <img src="./assets/icon-switzerland.svg" alt="Bandeira do Brazil">
+                    <strong>07:00</strong>
+                    <img src="./assets/icon-cameroon.svg" alt="Bandeira da Serbia">
                 </li>
                 <li>
-                    <img src="./assets/icon-brazil.svg" alt="Bandeira do Brazil">
-                    <strong>16:00</strong>
-                    <img src="./assets/icon-serbia.svg" alt="Bandeira da Serbia">
+                    <img src="./assets/icon-portugal.svg" alt="Bandeira do Brazil">
+                    <strong>13:00</strong>
+                    <img src="./assets/icon-ghana.svg" alt="Bandeira da Serbia">
                 </li>
                 <li>
                     <img src="./assets/icon-brazil.svg" alt="Bandeira do Brazil">
