--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="script.js"></script>
     <title>Calendário de Jogos | NLW COPA</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <div id="app"></div>
-    <script src="script.js"></script>
 </body>
 
 </html>
